Fixed banner alignment. Added onhover functionality for banner image

--- a/style.css
+++ b/style.css
@@ -5,14 +5,22 @@ Author URI: http://www.joeycarlos.com
 Version: 1.0
 */
 
+.site-banner {
+	text-align: center;
+	position: relative;
+	height: 200px;
+}
+
 h1 {
 	font-family: 'Signika', sans-serif;
 	font-size: 60px;
 	color: #e6e6e6;
-	margin: 0;
+	margin: auto 0;
 	font-weight: normal;
-	padding: 0;
+	padding: 0 0 0 50px;
 	display: inline-block;
+	vertical-align: middle;
+	height: 200px;
 }
 
 h1 a:link,
@@ -25,6 +33,8 @@ h1 a:hover {
 }
 
 .header-picture {
+	width:150px;
+	height:150px;
 	display: inline-block;
 }
 
@@ -50,6 +60,8 @@ p {
 /* General Layout */
 div.container {
 	max-width: 920px;
+	margin: 0 auto;
+	padding-top: 20px;
 	padding-left: 20px;
 	padding-right: 20px;
 }
